[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "chic"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [{
    name = "Thomas C Nicholas",
    email = "thomas.nicholas@chem.ox.ac.uk"
}]
license = "BSD"
homepage = "https://github.com/tcnicholas/chic"
keywords = ["materials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[project.packages]
chic = { include = "chic" }

[project.dependencies]
numpy = "*"
scipy = "*"
scikit-learn = "*"
pymatgen = "*"
networkx = "*"
crystal-toolkit = "*"
crystaltoolkit-extension = "*"
