[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chic"
version = "0.1.0"
keywords = ["materials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[[project.authors]]
name = "Thomas C Nicholas"
email = "thomas.nicholas@chem.ox.ac.uk"

[project.license]
file = "LICENSE"

dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pymatgen",
    "ase",
    "networkx",
    "crystal-toolkit",
    "crystaltoolkit-extension"
]